--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,31 @@ main .category-card-wrapper .category-card__title {
 }
 main .hits-wrapper {
   display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  margin-top: 30px;
 }
-main .hits-wrapper .product-card__control {
+main .hits-wrapper .product-card__wrapper {
   display: flex;
+}
+main .hits-wrapper .product-card__title {
+  font-size: 20px;
+  text-align: center;
+  margin-bottom: 15px;
+}
+main .hits-wrapper .product-card__buy-image {
+  width: 140px;
+}
+main .hits-wrapper .product-card__specs {
+  margin-bottom: 10px;
+}
+main .hits-wrapper .product-card__price-old {
+  text-decoration: line-through;
+  font-size: 16px;
+  letter-spacing: 1px;
+}
+main .hits-wrapper .product-card__price {
+  font-size: 22fpx;
+  font-weight: 700;
+  letter-spacing: 1px;
 }/*# sourceMappingURL=style.css.map */
