--- a/layout-remake/scss/style.scss
+++ b/layout-remake/scss/style.scss
@@ -165,11 +165,35 @@ main {
     }
     .hits-wrapper {
         display: flex;
-
+        flex-wrap: wrap;
+        gap: 30px;
+        margin-top: 30px;
         .product-card{
-
-            &__control {
+            // margin: 0 30px;
+            &__wrapper {
                 display: flex;
+            }
+
+            &__title {
+                font-size: 20px;
+                text-align: center;
+                margin-bottom: 15px;
+            }
+            &__buy-image {
+                width: 140px;
+            }
+            &__specs {
+                margin-bottom: 10px;
+            }
+            &__price-old {
+                text-decoration:line-through;
+                font-size: 16px;
+                letter-spacing: 1px;
+            }
+            &__price {
+                font-size: 22fpx;
+                font-weight: 700;
+                letter-spacing: 1px;
             }
         }
     }
